<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </LinearLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/give_me"

        android:textStyle="bold">

    </Button>

    <Button

        android:id="@+id/btn2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/put_this"
        android:textStyle="bold">

    </Button>

    <Button

        android:id="@+id/btn3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/i_want_this"
        android:textStyle="bold">

    </Button>

    <Button

        android:id="@+id/btn4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/search_for_something"
        android:textStyle="bold">

    </Button>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#DA3F3F"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_add" />

    <ProgressBar
        android:layout_margin="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:id="@+id/pb_volume"/>


</LinearLayout>